# course_beta

./: .gitignore  pyproject.toml
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
